Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1319

Large cache (> 16TB) not working?

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.2.0
    • 3.3.0
    • Cache
    • None
    • Centos 6.1

    Description

      Is there a maximum disk cache size in ATS 3.20? I seem to be getting this WARNING/Error:


      [TrafficServer] using root directory '/opt/trafficserver'
      [Jun 21 21:57:10.038]

      {0x7f4d67aa67e0} STATUS: opened /opt/trafficserver/var/log/trafficserver/diags.log
      [Jun 21 21:57:10.038] {0x7f4d67aa67e0}

      NOTE: updated diags config
      [Jun 21 21:57:10.042] Server

      {0x7f4d67aa67e0} NOTE: cache clustering disabled
      [Jun 21 21:57:10.083] Server {0x7f4d67aa67e0}

      NOTE: cache clustering disabled
      [Jun 21 21:57:10.182] Server

      {0x7f4d67aa67e0} NOTE: logging initialized[11], logging_mode = 3
      [Jun 21 21:57:10.183] Server {0x7f4d67aa67e0}

      NOTE: loading plugin '/opt/trafficserver/libexec/trafficserver/stats_over_http.so'
      [Jun 21 21:57:10.185] Server

      {0x7f4d67aa67e0}

      NOTE: traffic server running
      [Jun 21 21:57:10.189] Server

      {0x7f4d63799700} WARNING: not enough space to increase volume: [1] to size: [20585472]
      [Jun 21 21:57:10.189] Server {0x7f4d63799700}

      NOTE: edit the volume.config file and restart traffic_server
      [Jun 21 21:57:10.189] Server

      {0x7f4d63799700}

      NOTE: cache disabled

      When I try to use more than a certain amount (16TB?) of cache, and the "cache disabled" message doesn't seem good.

      I have a system with 24 600GB drives that works well, but a system with 24 900GB drives will have the above error, unless I disable at least 5 drives in storage.config.

      I tried splitting the cache up in to 2 volumes, each 50% in volume.config, but I still get the same error.

      Attachments

        1. p1.txt
          1 kB
          Jan van Doorn

        Issue Links

          Activity

            People

              jamespeach James Peach
              jvd Jan van Doorn
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: