TS-1319: Large cache (> 16TB) not working

I have a system with 24 600GB drives that works well, but a system
with 24 900GB drives will have the following error, unless I disable
at least 5 drives in storage.config.

[Jun 21 21:57:10.189] Server {0x7f4d63799700} WARNING: not enough space to increase volume: [1] to size: [20585472]
[Jun 21 21:57:10.189] Server {0x7f4d63799700} NOTE: edit the volume.config file and restart traffic_server

I did some digging, and it seems the size in iocore/cache/P_CacheVol.h
is rolling over.